[package]
name = "fiber-probe-core"
description = "Fiber Network payment readiness SDK — pre-flight and diagnose primitives for wallets and node operators."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
