[package]
name = "fiber-probe"
description = "CLI for Fiber Network payment diagnostics: pre-flight (check), post-hoc classification (diagnose), and node status."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
fiber-probe-core = { path = "../fiber-probe-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde_json = "1"
colored = "3"
